# Vision-Models

./: .gitattributes  .gitignore  README.md  python.sh  requirements.txt  sample_images.dvc  trained-ld.dvc  trained-rc.dvc
.dvc/: .gitignore  config
V1/sample_images/10S/: l8_10S_00001.txt
V1/sample_images/10T/: l8_10T_00002.txt
V1/sample_images/11R/: l8_11R_00001.txt
V1/sample_images/12R/: l8_12R_00001.txt
V1/sample_images/17R/: l8_17R_00168.txt  l8_17R_00221.txt
V1/sample_images/17T/: l8_17T_00001.txt
V1/sample_images/32S/: l8_32S_00001.txt
V1/sample_images/33S/: l8_33S_00001.txt
V1/sample_images/52S/: l8_52S_00001.txt
V1/trained-ld/: add_nms_to_onnx.py  convert_ld_torch_script.py
V1/trained-rc/: convert_onnx.py  convert_tensorrt.py  rc_model_weights.trt  tif2png.py
conversion_scripts/ldnets/: check_torch_script.py  convert_ld_torch_script.py  ld_pt_to_trt_script.py
conversion_scripts/rcnet/: convert_onnx.py  convert_tensorrt.py  fix_mean.py  pth_to_trt_script.py
conversion_scripts/rcnet/trt_cpp/: CMakeLists.txt
sample_images/: .gitignore
sample_images/10T/: l8_10T_00001.txt
sample_images/16T/: l8_16T_00001.txt
sample_images/17T/: l8_17T_00330.txt
sample_images/18S/: l8_18S_00001.txt
sample_images/32T/: l8_32T_00001.txt
sample_images/33T/: l8_33T_00005.txt
sample_images/53S/: l8_53S_00001.txt
sample_images/54T/: l8_54T_00001.txt
trained-rc/V1/: bindings.txt
trained-rc/V2/: rc_model_weights.pth  rc_model_weights.trt
trained-rc/V3/: rc_model_weights.pth
val_scripts/: run_sample_ld.py  run_sample_rc.py
(+82 files in other folders)
